# mxt

./: Makefile  README  stack.yaml  test-Makefile
mxt/: .gitignore  Makefile  README  Version.mk  mxt.cabal
mxt-binary/: mxt-binary.cabal
mxt-binary/src/Text/XML/MXT/Arrow/: Binary.hs
mxt-binary/src/Text/XML/MXT/DOM/: Binary.hs
mxt-binary/test/: TestXmlTreeBinary.hs
mxt-compat8/: mxt-compat8.cabal
mxt-compat8/src/Text/XML/MXT/Arrow/: Compat8.hs
mxt-compat8/src/Text/XML/MXT/DOM/: XmlOptions.hs
mxt-curl/: mxt-curl.cabal
mxt-curl/src/Text/XML/MXT/: Curl.hs
mxt-curl/src/Text/XML/MXT/Arrow/: LibCurlInput.hs
mxt-curl/src/Text/XML/MXT/IO/: GetHTTPLibCurl.hs
mxt-expat/: mxt-expat.cabal
mxt-expat/examples/hparser/: HXmlParser.hs  Makefile
mxt-expat/src/Text/XML/MXT/: Expat.hs
mxt-expat/src/Text/XML/MXT/Arrow/: ExpatInterface.hs
mxt-filter/: Makefile  README  Version.mk  mxt-filter.cabal
mxt-filter/examples/: Makefile
mxt-filter/examples/blutgraetsche/: .ghci  Citations.hs  Makefile
mxt-filter/examples/dtd2haskell/: .gitignore  DTDtoMXT.hs  Makefile
mxt-filter/examples/hfilter/: FilterExample.hs  Makefile
mxt-filter/examples/hparser/: HXmlParser.hs  Makefile
mxt-filter/examples/hsvg/: .ghci  Makefile  TreeVisualisation.hs
mxt-filter/examples/hunit/: HUnitExample.hs  Makefile
mxt-filter/examples/mini/: Makefile  ParseExample.hs
mxt-filter/src/: .gitignore  MXT.hs  Makefile  mxt-filter-package.hs
mxt-filter/src/Data/Tree/NTree/: Filter.hs
mxt-filter/src/Text/XML/MXT/: DOM.hs  Parser.hs
mxt-filter/src/Text/XML/MXT/DOM/: EditFilters.hs  Namespace.hs  NamespaceFilter.hs  XmlState.hs  XmlTree.hs  XmlTreeFilter.hs  XmlTreeFunctions.hs  XmlTreeTypes.hs
mxt-filter/src/Text/XML/MXT/Parser/: DTDProcessing.hs  DefaultURI.hs  HtmlParser.hs  MainFunctions.hs  ProtocolHandler.hs  ProtocolHandlerFile.hs  ProtocolHandlerHttpCurl.hs  ProtocolHandlerHttpNative.hs  ProtocolHandlerHttpNativeOrCurl.hs  XmlInput.hs  XmlOutput.hs  XmlParser.hs
mxt-filter/src/Text/XML/MXT/ProtocolHandler/: ProtocolHandler.hs
mxt-filter/src/Text/XML/MXT/Validator/: AttributeValueValidation.hs  DTDValidation.hs  DocTransformation.hs  DocValidation.hs  IdValidation.hs  RE.hs  Validation.hs  ValidationFilter.hs  XmlRE.hs
mxt-http/: mxt-http.cabal
mxt-http/src/Text/XML/MXT/: HTTP.hs
mxt-http/src/Text/XML/MXT/Arrow/: LibHTTPInput.hs
mxt-http/src/Text/XML/MXT/IO/: GetHTTPNative.hs
mxt-http/test/: Test.hs  mxt-http-test.cabal  test.cabal
mxt-install/: MXTTest.hs  mxt-install.cabal
mxt-install/examples/hparser/: HXmlParser.hs  Makefile
mxt-monad/: mxt-monad.cabal
mxt-monad/example/core9-hparser/: Main.hs  core9-hparser.cabal
mxt-monad/example/monad-hparser/: Main.hs  monad-hparser.cabal
mxt-monad/src/: Tree.hs
mxt-monad/src/Text/XML/MXT/: Core9.hs  Monad.hs
mxt-monad/src/Text/XML/MXT/Monad/: ArrowXml.hs  Binary.hs  DTDProcessing.hs  DocumentInput.hs  DocumentOutput.hs  Edit.hs  GeneralEntitySubstitution.hs  Namespace.hs  ParserInterface.hs  Pickle.hs  ProcessDocument.hs  ReadDocument.hs  WriteDocument.hs  XmlOptions.hs  XmlRegex.hs  XmlState.hs
mxt-relaxng/: mxt-relaxng.cabal
mxt-relaxng/examples/RelaxTestSuite/: Makefile  TestCases.hs
mxt-relaxng/examples/hparser/: HXmlParser.hs  Makefile  hparser.cabal
mxt-relaxng/examples/hrelaxng/: .ghci  HRelaxNG.hs  Makefile  Simple.hs  Validate.hs
mxt-relaxng/src/Text/XML/MXT/: RelaxNG.hs
mxt-relaxng/src/Text/XML/MXT/RelaxNG/: BasicArrows.hs  CreatePattern.hs  DataTypeLibMysql.hs  DataTypeLibUtils.hs  DataTypeLibraries.hs  DataTypes.hs  PatternFunctions.hs  SchemaGrammar.hs  (+6 more)
mxt-tagsoup/: mxt-tagsoup.cabal
mxt-tagsoup/examples/hparser/: HXmlParser.hs
mxt-tagsoup/src/Text/XML/MXT/: TagSoup.hs
mxt-xmlschema/: mxt-xmlschema.cabal
mxt-xmlschema/schema-validator/: HXmlParser.hs  mxt-xmlschema-validator.cabal
mxt-xmlschema/src/: Main.hs
mxt-xmlschema/src/Text/XML/MXT/: XMLSchema.hs
mxt-xpath/: mxt-xpath.cabal
mxt-xpath/examples/hunit/: HUnitExample.hs  Makefile
mxt-xpath/examples/hxpath/: HXPath.hs  Makefile  XPathShell.hs  ghci-HXPath
mxt-xpath/src/Text/XML/MXT/: XPath.hs
mxt-xpath/test/: Books.hs  NameSpace.hs
mxt-xpath/test/mxt-path-preceding-sibling-bug/: preceding-sibling-bug.hs
mxt/doc/: HaskellXMLToolbox-UH.tex  Makefile  index.html
mxt/doc/cookbook/: HRdf.hs  Makefile  RDFFunctions.hs  RDFNormalize.hs  RDFParser.hs  SPARQLEval.hs  SPARQLFunctions.hs  SPARQLParser.hs
mxt/doc/cookbook/doc/: Makefile  thesis.tex
mxt/doc/cookbook/doc/images/: Makefile
mxt/doc/hvalidator/: abstract.xml  app_a.xml  app_b.xml  chap2.xml  chap3.xml  chap4.xml  chap5.xml  preface.xml  thesis.xml
mxt/examples/: Makefile
mxt/examples/arrows/: Makefile
mxt/examples/arrows/AGentleIntroductionToMXT/: Makefile  SimpleExamples.hs
mxt/examples/arrows/AGentleIntroductionToMXT/PicklerExample/: Baseball.hs  Makefile
mxt/examples/arrows/HelloWorld/: HelloWorld.hs  Makefile  Mini.hs
mxt/examples/arrows/IsoLatin/: GenDecodeLatin.hs
mxt/examples/arrows/absurls/: AbsURIs.hs  Makefile  ProcessDocument.hs
mxt/examples/arrows/blutgraetsche/: Citations.hs  Makefile
mxt/examples/arrows/dtd2mxt/: .ghci  .gitignore  DTDtoMXT.hs  Makefile
mxt/examples/arrows/hparser/: HXmlParser.hs  Makefile
mxt/examples/arrows/hunit/: HUnitExample.hs
mxt/examples/arrows/performance/: GenDoc.hs  Makefile
mxt/examples/arrows/pickle/: Makefile  PickleTest.hs  PickleTestWithNamespaces.hs
mxt/examples/mimetypes/: Makefile
mxt/examples/w3ctest/: Makefile  RunTestCases.hs  TestSuite.hs
mxt/src/: .gitignore  MXT.hs  Makefile  mxt-package.hs
mxt/src/Control/Arrow/: ArrowList.hs
mxt/src/Text/XML/MXT/: Core.hs  Version.hs
mxt/test/: .ghci  Align.hs  ArrowMerge.hs  ErrorStatus.hs  Fanout.hs  Henry.hs  Hread.hs  HsLoggerTest.hs  InsertTreeTemplate.hs  Kulla.hs  MapA.hs  Mime.hs  Pick.hs  PickleNS.hs  ReadBinary.hs  TagSoupTest.hs  TestHaddock.hs  TestHtmlPi.hs  TestValidateDTD.hs  TextExtract.hs  Zipper.hs  test.cabal
mxt/test/picklefailure/: Main.hs
mxt/test/unpicke-valid/: Validate.hs  unpicke-valid.cabal
(+187 files in other folders)
