-- arch-tag: Haskell XML Toolbox main description file
Name:           mxt-curl
Version:        9.1.1.1
Synopsis:       LibCurl interface for MXT
Description:    LibCurl interface for MXT
License:        OtherLicense
License-file:   LICENSE
Author:         Uwe Schmidt
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Stable
Category:       XML
Homepage:       https://github.com/xplat/mxt
Copyright:      Copyright (c) 2010 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

library
 exposed-modules:
  Text.XML.MXT.Curl

 other-modules:
  Text.XML.MXT.Arrow.LibCurlInput,
  Text.XML.MXT.IO.GetHTTPLibCurl

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -caf-all

 extensions:

 build-depends: base       >= 4   && < 5,
                parsec     >= 2.1 && < 4,
                bytestring >= 0.9 && < 1,
                curl       >= 1.3 && < 2,
                mxt        >= 9.1 && < 10

Source-Repository head
  Type:     git
  Location: git://github.com/xplat/mxt.git
