Name:           mxt-http
Version:        9.1.5.2
Synopsis:       Interface to native Haskell HTTP package HTTP
Description:    Interface to native Haskell HTTP package HTTP.
                This package can be used as alternative for the mxt-curl package
                for accessing documents via HTTP.
                .
                Changes from 9.1.3: Works with ghc-7.10
                .
                Changes to 9.1.3: New warnings from ghc-7.4 removed
License:        MIT
License-file:   LICENSE
Author:         Uwe Schmidt
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Experimental
Category:       XML
Homepage:       https://github.com/xplat/mxt
Copyright:      Copyright (c) 2011 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

flag network-uri
  description: Get Network.URI from the network-uri package,
               with ghc <  7.10 default is False,
               with ghc >= 7.10 default is True 
  default: False

library
 exposed-modules:
  Text.XML.MXT.HTTP

 other-modules:
  Text.XML.MXT.Arrow.LibHTTPInput,
  Text.XML.MXT.IO.GetHTTPNative

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -caf-all

 extensions:

 build-depends: base       >= 4    && < 5,
                parsec     >= 2.1  && < 4,
                bytestring >= 0.9  && < 1,
                HTTP       >= 4000 && < 5000,
                mxt        >= 9.1  && < 10

 if flag(network-uri)
   build-depends: network-uri >= 2.6,
                  network     >= 2.6
 else
   if impl(ghc >= 7.10)
     build-depends: network-uri >= 2.6,
                    network     >= 2.6
   else
     build-depends: network >= 2.4 && < 2.6

Source-Repository head
  Type:     git
  Location: git://github.com/xplat/mxt.git
