-- arch-tag: Haskell XML Toolbox XPath Package
Name:           mxt-xpath
Version:        9.1.2.2
Synopsis:       The XPath modules for MXT.
Description:    The Haskell XML Toolbox XPath library.
                .
                Changes from 9.1.2: Bug in indexing result sets removed
License:        OtherLicense
License-file:   LICENSE
Author:         Torben Kuseler
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Stable
Category:       XML
Homepage:       https://github.com/xplat/mxt
Copyright:      Copyright (c) 2005-2010 Torben Kuseler, Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.6

extra-source-files:
 examples/hunit/HUnitExample.hs
 examples/hunit/Makefile
 examples/hunit/mini1.xml
 examples/hunit/mini2.xml
 examples/hxpath/example1.xml
 examples/hxpath/HXPath.hs
 examples/hxpath/Makefile
 examples/hxpath/W3CTestData.hs
 examples/hxpath/xhtml/xhtml1-frameset.dtd
 examples/hxpath/xhtml/xhtml1-strict.dtd
 examples/hxpath/xhtml/xhtml1-transitional.dtd
 examples/hxpath/xhtml/xhtml-lat1.ent
 examples/hxpath/xhtml/xhtml-special.ent
 examples/hxpath/xhtml/xhtml-symbol.ent
 examples/hxpath/xhtml/xhtml.xml
 examples/hxpath/XPathShell.hs
 examples/Makefile

library
 exposed-modules:
  Text.XML.MXT.XPath,
  Text.XML.MXT.XPath.Arrows,
  Text.XML.MXT.XPath.NavTree,
  Text.XML.MXT.XPath.XPathArithmetic,
  Text.XML.MXT.XPath.XPathDataTypes,
  Text.XML.MXT.XPath.XPathEval,
  Text.XML.MXT.XPath.XPathFct,
  Text.XML.MXT.XPath.XPathKeywords,
  Text.XML.MXT.XPath.XPathParser,
  Text.XML.MXT.XPath.XPathToNodeSet,
  Text.XML.MXT.XPath.XPathToString

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -caf-all

 build-depends: base       >= 4   && < 5,
                containers >= 0.2 && < 1,
                directory  >= 1   && < 2,
                filepath   >= 1   && < 2,
                parsec     >= 2.1 && < 4,
                mxt        >= 9.1 && < 10

Source-Repository head
  Type:     git
  Location: git://github.com/xplat/mxt.git
