-- arch-tag: Haskell XML Toolbox main description file
Name:           mxt
Version:        9.3.1.15
Synopsis:       A collection of tools for processing XML with Haskell.
Description:    The Haskell XML Toolbox bases on the ideas of HaXml and HXML,
                but introduces a more general approach for processing XML with Haskell.
                The Haskell XML Toolbox uses a generic data model for representing XML documents,
                including the DTD subset and the document subset, in Haskell.
                It contains a validating XML parser, a HTML parser, namespace support,
                an XPath expression evaluator, an XSLT library, a RelaxNG schema validator
                and funtions for serialization and deserialization of user defined data.
                The library makes extensive use of the arrow approach for processing XML.
                Since version 9 the toolbox is partitioned into various (sub-)packages.
                This package contains the core functionality,
                mxt-curl, mxt-tagsoup, mxt-relaxng, mxt-xpath, mxt-xslt,
                mxt-regex-xmlschema contain the extensions.
                mxt-unicode contains encoding and decoding functions,
                mxt-charproperties char properties for unicode and XML.
                .
                Changes from 9.3.1.14: For ghc-7.10 network-uri is automatically selected 
                .
                Changes from 9.3.1.13: ghc-7.10 compatibility
                .
                Changes from 9.3.1.12: Bug when unpickling an empty attribute value removed
                .
                Changes from 9.3.1.11: Bug fix in haddock comments
                .
                Changes from 9.3.1.10: Bug in DTD validation, space and time leak in delta removed
                .
                Changes from 9.3.1.9: lower bound of mtl dependency lowered to 2.0.1
                .
                Changes from 9.3.1.8: Bug in hread removed
                .
                Changes from 9.3.1.7: Foldable and Traversable instances for NTree added
                Control.Except used instead of deprecated Control.Error
                .
                Changes from 9.3.1.6: canonicalize added in hread and hreadDoc
                .
                Changes from 9.3.1.4: conditionally (no default)
                dependency from networt changed to network-uri with flag "network-uri"
                .
                Changes from 9.3.1.3: warnings from ghc-7.8.1 removed
                .
                Changes from 9.3.1.2: https as protocol added
                .
                Changes from 9.3.1.1: new parser xreadDoc
                .
                Changes from 9.3.1.0: in readString all input decoding switched off
                .
                Changes from 9.3.0.1: lower bound for network set to be >= 2.4
                .
                Changes from 9.3.0: upper bound for network set to be < 2.4
                (URI signatures changed in 2.4)
                .
                Changes from 9.2.2: XMLSchema validation integrated
                .
                Changes from 9.2.1: user defined mime type handlers added
                .
                Changes from 9.2.0: New warnings from ghc-7.4 removed
License:        MIT
License-file:   LICENSE
Author:         Uwe Schmidt, Martin Schmidt, Torben Kuseler
Maintainer:     Uwe Schmidt <uwe@fh-wedel.de>
Stability:      Stable
Category:       XML
Homepage:       https://github.com/xplat/mxt
Copyright:      Copyright (c) 2005-2015 Uwe Schmidt
Build-type:     Simple
Cabal-version:  >=1.8

extra-source-files:
 examples/arrows/absurls/AbsURIs.hs
 examples/arrows/absurls/lousy.html
 examples/arrows/absurls/Makefile
 examples/arrows/absurls/ProcessDocument.hs
 examples/arrows/AGentleIntroductionToMXT/.ghci
 examples/arrows/AGentleIntroductionToMXT/Makefile
 examples/arrows/AGentleIntroductionToMXT/PicklerExample/Baseball.hs
 examples/arrows/AGentleIntroductionToMXT/PicklerExample/Makefile
 examples/arrows/AGentleIntroductionToMXT/PicklerExample/new-simple2.xml
 examples/arrows/AGentleIntroductionToMXT/PicklerExample/simple2.xml
 examples/arrows/AGentleIntroductionToMXT/SimpleExamples.hs
 examples/arrows/dtd2mxt/DTDtoMXT.hs
 examples/arrows/dtd2mxt/.ghci
 examples/arrows/dtd2mxt/Makefile
 examples/arrows/HelloWorld/bye.xml
 examples/arrows/HelloWorld/HelloWorld.hs
 examples/arrows/HelloWorld/hello.xml
 examples/arrows/HelloWorld/Makefile
 examples/arrows/HelloWorld/Mini.hs
 examples/arrows/hparser/emptyElements.html
 examples/arrows/hparser/example1.xml
 examples/arrows/hparser/example1CRLF.xml
 examples/arrows/hparser/HXmlParser.hs
 examples/arrows/hparser/invalid1.xml
 examples/arrows/hparser/invalid2.rng
 examples/arrows/hparser/invalid3.rng
 examples/arrows/hparser/invalid.xml
 examples/arrows/hparser/lousy.html
 examples/arrows/hparser/Makefile
 examples/arrows/hparser/namespace0.xml
 examples/arrows/hparser/namespace1.xml
 examples/arrows/hparser/valid1.rng
 examples/arrows/hparser/valid1.xml
 examples/arrows/performance/GenDoc.hs
 examples/arrows/performance/Makefile
 examples/arrows/pickle/Makefile
 examples/arrows/pickle/PickleTest.hs
 examples/xhtml/tmp.xml
 examples/xhtml/xhtml1-frameset.dtd
 examples/xhtml/xhtml1-strict.dtd
 examples/xhtml/xhtml1-transitional.dtd
 examples/xhtml/xhtml-lat1.ent
 examples/xhtml/xhtml-special.ent
 examples/xhtml/xhtml-symbol.ent
 examples/xhtml/xhtml.xml

flag network-uri
  description: Get Network.URI from the network-uri package,
               with ghc <  7.10 default is False,
               with ghc >= 7.10 default is True 
  default: False

library
 exposed-modules:
  Control.Arrow.ArrowExc,
  Control.Arrow.ArrowIO,
  Control.Arrow.ArrowIf,
  Control.Arrow.ArrowList,
  Control.Arrow.ArrowNF,
  Control.Arrow.ArrowNavigatableTree,
  Control.Arrow.ArrowState,
  Control.Arrow.ArrowTree,
  Control.Arrow.IOListArrow,
  Control.Arrow.IOStateListArrow,
  Control.Arrow.ListArrow,
  Control.Arrow.ListArrows,
  Control.Arrow.NTreeEdit,
  Control.Arrow.StateListArrow,
  Control.FlatSeq,
  Data.AssocList,
  Data.Atom,
  Data.Function.Selector,
  Data.Tree.Class,
  Data.Tree.NTree.TypeDefs,
  Data.Tree.NTree.Edit,
  Data.Tree.NTree.Zipper.TypeDefs,
  Data.Tree.NavigatableTree.Class,
  Data.Tree.NavigatableTree.XPathAxis,
  Text.XML.MXT.Arrow.Binary,
  Text.XML.MXT.Arrow.DTDProcessing,
  Text.XML.MXT.Arrow.DocumentInput,
  Text.XML.MXT.Arrow.DocumentOutput,
  Text.XML.MXT.Arrow.Edit,
  Text.XML.MXT.Arrow.GeneralEntitySubstitution,
  Text.XML.MXT.Arrow.Namespace,
  Text.XML.MXT.Arrow.ParserInterface,
  Text.XML.MXT.Arrow.Pickle,
  Text.XML.MXT.Arrow.Pickle.DTD,
  Text.XML.MXT.Arrow.Pickle.Schema,
  Text.XML.MXT.Arrow.Pickle.Xml,
  Text.XML.MXT.Arrow.ProcessDocument,
  Text.XML.MXT.Arrow.ReadDocument,
  Text.XML.MXT.Arrow.WriteDocument,
  Text.XML.MXT.Arrow.XmlArrow,
  Text.XML.MXT.Arrow.XmlOptions,
  Text.XML.MXT.Arrow.XmlRegex,
  Text.XML.MXT.Arrow.XmlState,
  Text.XML.MXT.Arrow.XmlState.ErrorHandling,
  Text.XML.MXT.Arrow.XmlState.MimeTypeTable,
  Text.XML.MXT.Arrow.XmlState.RunIOStateArrow,
  Text.XML.MXT.Arrow.XmlState.TraceHandling,
  Text.XML.MXT.Arrow.XmlState.TypeDefs,
  Text.XML.MXT.Arrow.XmlState.URIHandling,
  Text.XML.MXT.Arrow.XmlState.SystemConfig,
  Text.XML.MXT.Core,
  Text.XML.MXT.DOM.FormatXmlTree,
  Text.XML.MXT.DOM.Interface,
  Text.XML.MXT.DOM.MimeTypeDefaults,
  Text.XML.MXT.DOM.MimeTypes,
  Text.XML.MXT.DOM.QualifiedName,
  Text.XML.MXT.DOM.ShowXml,
  Text.XML.MXT.DOM.TypeDefs,
  Text.XML.MXT.DOM.Util,
  Text.XML.MXT.DOM.XmlKeywords,
  Text.XML.MXT.DOM.XmlNode,
  Text.XML.MXT.DTDValidation.AttributeValueValidation,
  Text.XML.MXT.DTDValidation.DTDValidation,
  Text.XML.MXT.DTDValidation.DocTransformation,
  Text.XML.MXT.DTDValidation.DocValidation,
  Text.XML.MXT.DTDValidation.IdValidation,
  Text.XML.MXT.DTDValidation.RE,
  Text.XML.MXT.DTDValidation.TypeDefs,
  Text.XML.MXT.DTDValidation.Validation,
  Text.XML.MXT.DTDValidation.XmlRE,
  Text.XML.MXT.IO.GetFILE,
  Text.XML.MXT.Parser.HtmlParsec,
  Text.XML.MXT.Parser.ProtocolHandlerUtil,
  Text.XML.MXT.Parser.XhtmlEntities,
  Text.XML.MXT.Parser.XmlCharParser,
  Text.XML.MXT.Parser.XmlDTDParser,
  Text.XML.MXT.Parser.XmlDTDTokenParser,
  Text.XML.MXT.Parser.XmlEntities,
  Text.XML.MXT.Parser.XmlParsec,
  Text.XML.MXT.Parser.XmlTokenParser,
  Text.XML.MXT.XMLSchema.DataTypeLibW3CNames,
  Text.XML.MXT.Version

 hs-source-dirs: src

 ghc-options: -Wall
 ghc-prof-options: -caf-all

 extensions: MultiParamTypeClasses DeriveDataTypeable FunctionalDependencies FlexibleInstances CPP

 build-depends: base       >= 4     && < 5,
                containers >= 0.2   && < 1,
                directory  >= 1     && < 2,
                filepath   >= 1     && < 2,
                parsec     >= 2.1   && < 4,
                HUnit      >= 1.2   && < 2,
                mtl        >= 2.0.1 && < 3,
                deepseq    >= 1.1   && < 2,
                bytestring >= 0.9   && < 1,
                binary     >= 0.5   && < 1,
                mxt-charproperties  >= 9.1    && < 10,
                mxt-unicode         >= 9.0.1  && < 10,
                mxt-regex-xmlschema >= 9.2    && < 10

 if flag(network-uri)
   build-depends: network-uri >= 2.6
 else
   if impl(ghc >= 7.10)
     build-depends: network-uri >= 2.6
   else
     build-depends: network >= 2.4 && < 2.6

Source-Repository head
  Type:     git
  Location: git://github.com/xplat/mxt.git
